fixed "Make A Statement" to right align in nav bar again

--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,10 @@ footer {
     padding: 30px;
 }
 
+#statement{
+    position: relative;
+    float: right;
+}
 
 .head {
     font-family: cursive;
